PROJECT ( loadRobot )

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)

CMAKE_POLICY(VERSION 2.6)

LINK_DIRECTORIES(${VR_LIB_DIR})

ADD_EXECUTABLE(${PROJECT_NAME} loadRobot.cpp)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${VR_BIN_DIR})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES FOLDER "Examples")
MESSAGE( STATUS "VR LIB  DIR " ${VR_LIB_DIR})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} VirtualRobot)

MESSAGE( STATUS ${PROJECT_NAME} " will be placed into " ${VR_BIN_DIR})

