PROJECT ( loadRobot )

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)

CMAKE_POLICY(VERSION 2.6)

LINK_DIRECTORIES(${VIRTUAL_ROBOT_LIB_DIR})

ADD_EXECUTABLE(${PROJECT_NAME} loadRobot.cpp)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${VIRTUAL_ROBOT_BIN_DIR})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES FOLDER "Examples")

TARGET_LINK_LIBRARIES(${PROJECT_NAME} VirtualRobot)

INSTALL(TARGETS ${PROJECT_NAME}
        DESTINATION ${VIRTUAL_ROBOT_INSTALL_BIN_DIR})
        
MESSAGE( STATUS ${PROJECT_NAME} " will be placed into " ${VIRTUAL_ROBOT_BIN_DIR})
MESSAGE( STATUS ${PROJECT_NAME} " will be installed into " ${VIRTUAL_ROBOT_INSTALL_BIN_DIR})

