PROJECT(ColCheckerPQP)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)
CMAKE_POLICY(VERSION 2.6)

ADD_DEFINITIONS(-DUSE_PQP)

# Specify headers and sources
FILE(GLOB SRCS ${PROJECT_SOURCE_DIR}/*.cpp)
FILE(GLOB INCS ${PROJECT_SOURCE_DIR}/*.h)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRCS} ${INCS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${VR_LIB_DIR})

TARGET_LINK_LIBRARIES(${PROJECT_NAME})

MESSAGE(STATUS ${PROJECT_NAME} " will be placed into " ${VR_LIB_DIR})

MESSAGE(STATUS "make install will install " ${PROJECT_NAME} " into " ${VR_INSTALL_LIB_DIR})
INSTALL(TARGETS ${PROJECT_NAME}
        EXPORT VirtualRobotLibraryDepends
        DESTINATION ${VR_INSTALL_LIB_DIR})

