PROJECT(ColCheckerPQP)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)
CMAKE_POLICY(VERSION 2.6)

ADD_DEFINITIONS(-DUSE_PQP)

# Specify headers and sources
FILE(GLOB SRCS ${PROJECT_SOURCE_DIR}/*.cpp)
FILE(GLOB INCS ${PROJECT_SOURCE_DIR}/*.h)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRCS} ${INCS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES FOLDER "3rd_Party")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${VirtualRobot_LIB_DIR})
IF(UNIX)
#MESSAGE("PQP 2: CMAKE_SYSTEM_PROCESSOR:${CMAKE_SYSTEM_PROCESSOR}")
	# We are on Linux
#	IF(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64")
#MESSAGE("PQP 3")
		ADD_DEFINITIONS(-fPIC)
#	ENDIF(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64")
ENDIF(UNIX)

TARGET_LINK_LIBRARIES(${PROJECT_NAME})

MESSAGE(STATUS " ** ${PROJECT_NAME}  will be placed into " ${VirtualRobot_LIB_DIR})

MESSAGE(STATUS " ** make install will install " ${PROJECT_NAME} " into " ${VirtualRobot_INSTALL_LIB_DIR})
INSTALL(TARGETS ${PROJECT_NAME}
        EXPORT VirtualRobotLibraryDepends
        DESTINATION ${VirtualRobot_INSTALL_LIB_DIR})

